--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        go: ["1.22", "1.21"]
+        go: ["1.23", "1.22", "1.21"]
     env:
       GOTOOLCHAIN: local
     steps:
@@ -32,9 +32,11 @@ jobs:
       - name: 🧸 golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.59.1
+          version: v1.60.1
       - name: 🔨 Test
-        run: go test -coverprofile=cover.out ./...
+        run: |
+          go get -C ./pkg/analyzer/testdata golang.org/x/exp/errors
+          go test -coverprofile=cover.out ./...
       - name: 🧑🏻‍💻 codecov
         uses: codecov/codecov-action@v4
         with:
