Check for JSON decoder; use gotypesalias; skip generated files
Signed-off-by: Oliver Eikemeier <eikemeier@fillmore-labs.com>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -48,3 +48,7 @@ issues:
       linters:
         - govet
       text: "lostcancel"
+    - path: ^main\.go$
+      linters:
+        - gocheckcompilerdirectives
+      text: "go:debug"
