Add URL; use TypeOf
Signed-off-by: Oliver Eikemeier <eikemeier@fillmore-labs.com>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -5,9 +5,7 @@ linters:
   enable-all: true
   disable:
     # deprecated
-    - execinquery
     - exportloopref
-    - gomnd
     # disabled
     - depguard
     - dupl
@@ -52,3 +50,6 @@ issues:
       linters:
         - gocheckcompilerdirectives
       text: "go:debug"
+    - linters:
+        - govet
+      text: '^shadow: declaration of "(ctx|err|ok)" shadows declaration at line \d+$'
