Move package to internal; minor refactoring; add tests
Signed-off-by: Oliver Eikemeier <eikemeier@fillmore-labs.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ name: Test
       - main
 jobs:
   test:
-    name: Test on Go ${{ matrix.go }}
+    name: Test on Go ${{ matrix.go-version }}
     permissions:
       checks: write
       contents: read
@@ -18,26 +18,30 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        go: ["1.23.3", "1.22.9"]
+        go-version: ["1.24.0-rc.3", "1.23.6", "1.22.12"]
+        include:
+          - go-version: "1.23.6"
+            update-coverage: true
     env:
       GOTOOLCHAIN: local
     steps:
       - name: ✔ Check out
         uses: actions/checkout@v4
-      - name: 🐹 Set up Go ${{ matrix.go }}
+      - name: 🐹 Set up Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go }}
+          go-version: ${{ matrix.go-version }}
       - name: 🧸 golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.62.0
+          version: v1.63.4
       - name: 🔨 Test
         run: |
           go get -C ./pkg/analyzer/testdata golang.org/x/exp/errors
           go test -coverprofile=cover.out ./...
       - name: 🧑🏻‍💻 codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
+        if: ${{ matrix.update-coverage }}
         with:
           files: ./cover.out
           token: ${{ secrets.CODECOV_TOKEN }}
