--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ name: Test
       - main
 jobs:
   test:
-    name: Test on Go ${{ matrix.go-version }}
+    name: Test on Go ${{ matrix.go }}
     permissions:
       checks: write
       contents: read
@@ -18,29 +18,34 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        go-version: ["1.24.0-rc.3", "1.23.6", "1.22.12"]
+        go: ["1.24", "1.23"]
         include:
-          - go-version: "1.23.6"
+          - go: "1.24"
+            go-version: "1.24.2"
             update-coverage: true
+          - go: "1.23"
+            go-version: "1.23.8"
     env:
       GOTOOLCHAIN: local
     steps:
       - name: ✔ Check out
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
       - name: 🐹 Set up Go ${{ matrix.go-version }}
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b  # v5.4.0
         with:
           go-version: ${{ matrix.go-version }}
       - name: 🧸 golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: golangci/golangci-lint-action@1481404843c368bc19ca9406f87d6e0fc97bdcfd  # v7.0.0
         with:
-          version: v1.63.4
+          version: v2.0.2
       - name: 🔨 Test
         run: |
-          go get -C ./pkg/analyzer/testdata golang.org/x/exp/errors
+          (cd ./pkg/internal/visitor/testdata && go mod download)
           go test -coverprofile=cover.out ./...
+        env:
+          GOEXPERIMENT: aliastypeparams
       - name: 🧑🏻‍💻 codecov
-        uses: codecov/codecov-action@v5
+        uses: codecov/codecov-action@0565863a31f2c772f9f0395002a31e3f06189574  # v5.4.0
         if: ${{ matrix.update-coverage }}
         with:
           files: ./cover.out
