--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -7,6 +7,14 @@ run:
 formatters:
   enable:
     - gofumpt
+    - goimports
+
+  settings:
+    gofumpt:
+      extra-rules: true
+    goimports:
+      local-prefixes:
+        - fillmore-labs.com/zerolint
 
 linters:
   default: all
@@ -17,9 +25,13 @@ linters:
     - embeddedstructfieldcheck
     - exhaustruct
     - forbidigo
+    - forcetypeassert
     - funcorder
+    - funlen
+    - gocognit
     - noinlineerr
     - nonamedreturns
+    - recvcheck
     - varnamelen
     - wrapcheck
     - wsl
@@ -101,6 +113,7 @@ linters:
     rules:
       - path: _test\.go$
         linters:
+          - funlen
           - govet
         text: "lostcancel"
       - path: ^main\.go$
