--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,44 +17,49 @@ jobs:
       pull-requests: read
       statuses: write
     runs-on: ubuntu-24.04-arm
+    timeout-minutes: 10
     strategy:
       matrix:
         go: ["1.25", "1.24"]
         include:
           - go: "1.25"
-            go-version: "1.25.0"
-            update-meta: true
+            go-version: "1.25.4"
+            latest: true
           - go: "1.24"
-            go-version: "1.24.6"
+            go-version: "1.24.10"
     env:
       GOTOOLCHAIN: local
     steps:
       - name: ✔ Check out
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8  # v5.0.0
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd  # v5.0.1
+        with:
+          persist-credentials: false
       - name: 🐹 Set up Go ${{ matrix.go-version }}
-        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5  # v5.5.0
+        uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00  # v6.0.0
         with:
           go-version: ${{ matrix.go-version }}
           cache-dependency-path: "**/go.sum"
+      - name: 📠 Go Telemetry
+        run: go telemetry on
       - name: 🧸 golangci-lint
-        uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9  # v8.0.0
+        uses: golangci/golangci-lint-action@0a35821d5c230e903fcfe077583637dea1b27b47  # v9.0.0
+        if: ${{ matrix.latest }}
         with:
-          version: v2.4.0
+          version: v2.6.2
+          verify: false
       - name: 🔨 Test
         run: |
           (cd ./pkg/internal/analyzer/testdata && go mod download)
           go test -coverprofile=cover.out ./...
-        env:
-          GOEXPERIMENT: aliastypeparams
       - name: 🧑🏻‍💻 codecov
-        uses: codecov/codecov-action@18283e04ce6e62d37312384ff67231eb8fd56d24  # v5.4.3
-        if: ${{ matrix.update-meta }}
+        uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7  # v5.5.1
+        if: ${{ matrix.latest }}
         with:
           files: ./cover.out
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: 🛜 Dependencies
         uses: actions/go-dependency-submission@f35d5c9af13ce9cc32f7930b171e315e878f6921  # v2.0.3
-        if: ${{ matrix.update-meta }}
+        if: ${{ matrix.latest }}
         with:
           go-mod-path: go.mod
           go-build-target: .
