--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -17,34 +17,78 @@ formatters:
         - fillmore-labs.com/zerolint
 
 linters:
-  default: all
-  disable:
+  enable:
     # keep-sorted start
-    - depguard
-    - dupl
-    - embeddedstructfieldcheck
-    - exhaustruct
-    - forbidigo
-    - forcetypeassert
-    - funcorder
-    - funlen
-    - gocognit
-    - noinlineerr
-    - nonamedreturns
-    - recvcheck
-    - varnamelen
-    - wrapcheck
-    - wsl
+    - copyloopvar
+    - errcheck
+    - errname
+    - exptostd
+    - gocheckcompilerdirectives
+    - gochecksumtype
+    - gocritic
+    - godot
+    - goheader
+    - gomoddirectives
+    - gosec
+    - govet
+    - iface
+    - inamedparam
+    - ineffassign
+    - intrange
+    - mirror
+    - misspell
+    - modernize
+    - nlreturn
+    - nolintlint
+    - paralleltest
+    - perfsprint
+    - predeclared
+    - reassign
+    - revive
+    - sloglint
+    - staticcheck
+    - tagalign
+    - tagliatelle
+    - testableexamples
+    - thelper
+    - tparallel
+    - unconvert
+    - unparam
+    - unused
+    - usestdlibvars
+    - usetesting
+    - wsl_v5
     # keep-sorted end
   settings:
     # keep-sorted start
-    cyclop:
-      max-complexity: 20
     errcheck:
       exclude-functions:
         - (io/fs.File).Close
-    gocognit:
-      min-complexity: 30
+        - (*os.File).Close
+        - (*github.com/goccy/go-yaml.Encoder).Close
+      verbose: true
+    goheader:
+      values:
+        const:
+          AUTHOR: Oliver Eikemeier
+        regexp:
+          RANGE: "2024-2025|2025"
+      template: |-
+        Copyright {{ RANGE }} {{ AUTHOR }}. All Rights Reserved.
+
+        Licensed under the Apache License, Version 2.0 (the "License");
+        you may not use this file except in compliance with the License.
+        You may obtain a copy of the License at
+
+            http://www.apache.org/licenses/LICENSE-2.0
+
+        Unless required by applicable law or agreed to in writing, software
+        distributed under the License is distributed on an "AS IS" BASIS,
+        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+        See the License for the specific language governing permissions and
+        limitations under the License.
+
+        SPDX-License-Identifier: Apache-2.0
     govet:
       enable-all: true
       disable:
@@ -56,15 +100,8 @@ linters:
           funcs:
             - fillmore-labs.com/zerolint/pkg/internal/analyzer/msg.Formatf
             - (*fillmore-labs.com/zerolint/pkg/internal/diag.Diag).LogErrorf
-    ireturn:
-      allow:
-        - anon
-        - error
-        - empty
-        - stdlib
-        - generic
-    mnd:
-      ignored-numbers: ["2", "3", "-1"]
+    nlreturn:
+      block-size: 2
     predeclared:
       ignore: ["new"]
     revive:
@@ -85,9 +122,6 @@ linters:
         - name: error-strings
         - name: errorf
         - name: exported
-        - name: file-header
-          arguments:
-            - "Copyright 2024-2025 Oliver Eikemeier. All Rights Reserved."
         - name: increment-decrement
         - name: indent-error-flow
         - name: range
@@ -101,21 +135,18 @@ linters:
         - name: var-declaration
         - name: var-naming
           # keep-sorted end
-    testifylint:
-      enable-all: true
-      disable:
-        - require-error
+    tagliatelle:
+      case:
+        rules:
+          json: kebab
+          yaml: kebab
+        use-field-name: true
     wsl_v5:
       disable:
         - assign
         # keep-sorted end
   exclusions:
     rules:
-      - path: _test\.go$
-        linters:
-          - funlen
-          - govet
-        text: "lostcancel"
       - path: ^main\.go$
         linters:
           - gocheckcompilerdirectives
