--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -3,6 +3,7 @@ version: "2"
 
 run:
   modules-download-mode: readonly
+  relative-path-mode: gomod
 
 formatters:
   enable:
@@ -39,7 +40,6 @@ linters:
     - misspell
     - modernize
     - nlreturn
-    - nolintlint
     - paralleltest
     - perfsprint
     - predeclared
@@ -53,16 +53,48 @@ linters:
     - thelper
     - tparallel
     - unconvert
-    - unparam
     - unused
     - usestdlibvars
     - usetesting
     - wsl_v5
     # keep-sorted end
+    - zerolint
+    - scopeguard
+    - errortype
   settings:
+    custom:
+      zerolint:
+        type: module
+        description: zerolint checks usage patterns of pointers to zero-size types.
+        original-url: https://fillmore-labs.com/zerolint
+        settings:
+          level: "full"
+          generated: true
+          match: "^fillmore-labs\\.com/zerolint"
+      scopeguard:
+        type: module
+        description: >-
+          scopeguard identifies variables with unnecessarily wide scope and suggests moving them to tighter
+          scopes.
+        original-url: https://fillmore-labs.com/scopeguard
+        settings:
+          conservative: true
+          max-lines: 10
+      errortype:
+        type: module
+        description: errortype helps prevent subtle bugs in error handling.
+        original-url: https://fillmore-labs.com/errortype
+        settings:
+          style-check: true
+          deep-is-check: false
+          check-is: true
+          unchecked-assert: true
+          check-unused: true
     # keep-sorted start
     errcheck:
       exclude-functions:
+        - go/ast.Fprint
+        - go/format.Node
         - (io/fs.File).Close
         - (*os.File).Close
         - (*github.com/goccy/go-yaml.Encoder).Close
@@ -72,7 +104,7 @@ linters:
         const:
           AUTHOR: Oliver Eikemeier
         regexp:
-          RANGE: "2024-2025|2025"
+          RANGE: '((2025\-2026)|(2024\-2025)|2024|2025|2026)'
       template: |-
         Copyright {{ RANGE }} {{ AUTHOR }}. All Rights Reserved.
 
@@ -89,17 +121,18 @@ linters:
         limitations under the License.
 
         SPDX-License-Identifier: Apache-2.0
+    gosec:
+      config:
+        G104:
+          ast:
+            - Fprint
+          format:
+            - Node
     govet:
       enable-all: true
       disable:
         - fieldalignment
-      settings:
-        shadow:
-          strict: true
-        printf:
-          funcs:
-            - fillmore-labs.com/zerolint/pkg/internal/analyzer/msg.Formatf
-            - (*fillmore-labs.com/zerolint/pkg/internal/diag.Diag).LogErrorf
+        - shadow
     nlreturn:
       block-size: 2
     predeclared:
@@ -147,10 +180,12 @@ linters:
         # keep-sorted end
   exclusions:
     rules:
+      - path: examples/
+        source: .
       - path: ^main\.go$
         linters:
           - gocheckcompilerdirectives
         text: "go:debug"
-      - linters:
-          - govet
-        text: '^shadow: declaration of "(ctx|err|ok)" shadows declaration at line \d+$'
+
+output:
+  sort-order: [file, linter]
